fix text-transform, col, icon size, padding, collapse and error message of profile user

--- a/src/components/EntryForm/styles/index.less
+++ b/src/components/EntryForm/styles/index.less
@@ -1,6 +1,3 @@
-.entry_form_wrapper {
-  width: 572px;
-}
 .entry_form_container {
   display: flex;
   flex-direction: column;
